results/SpecGenBench/0-shot/log-BubbleSortDesc-2023_11_28_21_21_17.txt
public class BubbleSortDesc { 
    
    //@ requires array != null;
    //@ requires x >= 0 && x < array.length;
    //@ requires y >= 0 && y < array.length;
    //@ ensures array[x] == \old(array[y]) && array[y] == \old(array[x]);
    void swap(int x, int y,  int array[]) {
        int temp;     
        temp = array[x];
        array[x] = array[y];
        array[y] = temp;
    }

    //@ requires arr != null;
    //@ ensures \result != null;
    //@ ensures (\forall int i; 0 <= i < \result.length - 1; \result[i] >= \result[i+1]);
    int[] bubbleSort(int arr[]) {
        int n = arr.length;

        for (int i = 0; i < n-1; i++) {	
            //@ loop_invariant 0 <= i <= n-1;
            //@ loop_invariant (\forall int k; 0 <= k < i; (\forall int j; 0 <= j < n-k-1; arr[j+1] <= arr[j]));
            //@ decreases n - i;
            for (int j = 0; j < n-i-1; j++) {
                if (arr[j+1] > arr[j]) {  
                    swap(j, j + 1, arr); 
                } 
            }
        } 
        return arr;
    } 
}
/home/max/Documents/JMLGPT/tmp/BubbleSortDesc.java:22: error: variable j is already defined in method bubbleSort(int[])
            //@ loop_invariant (\forall int k; 0 <= k < i; (\forall int j; 0 <= j < n-k-1; arr[j+1] <= arr[j]));
                                                                        ^
1 error

